# mr-hrtf

./: CMakeLists.txt  README.md
mr-hrtf/: generate_hrtf_database.py  mr-hrtf.cpp  mr-hrtf.h
